syntax = "proto3";
package proto;

option go_package = "./proto";
import "common.proto";

message MageTalents {
	// Arcane
	int32 arcane_concentration = 1;
	int32 improved_counterspell = 2;
	int32 netherwind_presence = 3;
	int32 torment_the_weak = 4;
	int32 invocation = 5;
	int32 improved_arcane_missiles = 6;
	int32 improved_blink = 7;
	int32 arcane_flows = 8;
	bool presence_of_mind = 9;
	int32 missile_barrage = 10;
	int32 prismatic_cloak = 11;
	int32 improved_polymorph = 12;
	bool arcane_tactics = 13;
	int32 incanters_absorption = 14;
	int32 improved_arcane_explosion = 16;
	int32 arcane_potency = 17;
	bool slow = 18;
	int32 nether_vortex = 19;
	bool focus_magic = 20;
	int32 improved_mana_gem = 21;
	bool arcane_power = 22;

	// Fire
	int32 master_of_elements = 23;
	int32 burning_soul = 24;
	int32 improved_fire_blast = 25;
	int32 ignite = 26;
	int32 fire_power = 27;
	int32 blazing_speed = 28;
	int32 impact = 29;
	int32 cauterize = 30;
	bool blast_wave = 31;
	bool hot_streak = 32;
	int32 improved_scorch = 33;
	bool molten_shields = 34;
	bool combustion = 35;
	int32 improved_hot_streak = 36;
	bool firestarter = 37;
	int32 improved_flamestrike = 38;
	bool dragons_breath = 39;
	int32 molten_fury = 40;
	int32 pyromaniac = 41;
	int32 critical_mass = 42;
	bool living_bomb = 43;

	// Frost
	int32 early_frost = 44;
	int32 piercing_ice = 45;
	int32 shatter = 46;
	int32 ice_floes = 47;
	int32 improved_cone_of_cold = 48;
	int32 piercing_chill = 49;
	int32 permafrost = 50;
	int32 ice_shards = 51;
	bool icy_veins = 52;
	int32 fingers_of_frost = 53;
	int32 improved_freeze = 54;
	int32 enduring_winter = 55;
	bool cold_snap = 56;
	int32 brain_freeze = 57;
	int32 shattered_barrier = 58;
	bool ice_barrier = 59;
	int32 reactive_barrier = 60;
	int32 frostfire_orb = 61;
	bool deep_freeze = 62;
}
enum MagePrimeGlyph {
	MagePrimeGlyphNone = 0;
	GlyphOfArcaneBarrage = 45738;
	GlyphOfArcaneBlast = 44955;
	GlyphOfArcaneMissiles = 42735;
	GlyphOfConeOfCold = 42753;
	GlyphOfDeepFreeze = 45736;
	GlyphOfFireball = 42739;
	GlyphOfFrostbolt = 42742;
	GlyphOfFrostfire = 44684;
	GlyphOfIceLance = 42745;
	GlyphOfLivingBomb = 63539;
	GlyphOfMageArmor = 42749;
	GlyphOfMoltenArmor = 42751;
	GlyphOfPyroblast = 42743;
}
enum MageMajorGlyph {
	MageMajorGlyphNone = 0;
	GlyphOfArcanePower = 42736;
	GlyphOfBlastWave = 44920;
	GlyphOfBlink = 42737;
	GlyphOfDragonSBreath = 42754;
	GlyphOfEvocation = 42738;
	GlyphOfFrostArmor = 69773;
	GlyphOfFrostNova = 42741;
	GlyphOfIceBarrier = 45740;
	GlyphOfIceBlock = 42744;
	GlyphOfIcyVeins = 42746;
	GlyphOfInvisibility = 42748;
	GlyphOfManaShield = 50045;
	GlyphOfPolymorph = 42752;
	GlyphOfSlow = 45737;
}
enum MageMinorGlyph {
	MageMinorGlyphNone = 0;
	GlyphOfArcaneBrilliance = 43339;
	GlyphOfArmors = 63416;
	GlyphOfConjuring = 43359;
	GlyphOfMirrorImage = 45739;
	GlyphOfSlowFall = 43364;
	GlyphOfTheMonkey = 43360;
	GlyphOfThePenguin = 43361;
}


message Mage {
	message Rotation {
		// Arcane Options.
		double missile_barrage_below_mana_percent = 15;
		double blast_without_missile_barrage_above_mana_percent = 16;
		double only_3_arcane_blast_stacks_below_mana_percent = 17;
		bool use_arcane_barrage = 20;

		// Fire Options.
		enum PrimaryFireSpell {
			Fireball = 0;
			FrostfireBolt = 1;
			Scorch = 2;
		}
		PrimaryFireSpell primary_fire_spell = 3;
		
		bool maintain_improved_scorch = 4;

		// Frost Options.
		bool use_ice_lance = 18;
	}
	
	message Options {
		enum ArmorType {
			NoArmor = 0;
			MageArmor = 1;
			MoltenArmor = 2;
		}
		ArmorType armor = 1;

		int32 focus_magic_percent_uptime = 3;
		UnitReference focus_magic_target = 4;

		// Chance for water elemental to disobey, doing nothing rather than cast.
		double water_elemental_disobey_chance = 7;
	}
	Options options = 3;
}